Fix a bug
Bug occurs when the scrollbar is bigger than the safe area

--- a/node_js/material/layouts.css
+++ b/node_js/material/layouts.css
@@ -72,10 +72,11 @@ x-layout > [slot=nav-rail] {
         display: block;
     }
     x-layout {
-        width: calc(100% - 2 * var(--safe-area) + 100vw - 100%);
+        width: calc(100% - 1 * var(--safe-area) - max(calc(var(--safe-area) - 100vw + 100%), var(--safe-area)));
         padding-top: calc(var(--bottom-space) + var(--safe-area));
-        padding-left: var(--safe-area);
-        padding-right: calc(var(--safe-area) - 100vw + 100%);
+        padding-left: max(calc(var(--safe-area) - 100vw + 100%), var(--safe-area));
+        padding-right: calc(min(calc(100vw - 100% - var(--safe-area)), 0px) + var(--safe-area));
+        /* I ain't touching this padding code ever again, neither should you.. */
         display: block;
     }
     x-layout > [slot=group][style*=width],
